--- a/example/index.html
+++ b/example/index.html
@@ -4,37 +4,78 @@
     <meta charset="UTF-8">
     <title>angular umeditor</title>
     <!--<link type="text/css" href="../lib/umeditor/dist/utf8-php/themes/default/css/umeditor.css">-->
-    <link href="../lib/umeditor/dist/utf8-php/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
-    <script src="../lib/umeditor/dist/utf8-php/third-party/jquery.min.js"></script>
-    <script src="../lib/umeditor/dist/utf8-php/umeditor.min.js"></script>
-    <script src="../lib/umeditor/dist/utf8-php/umeditor.config.js"></script>
+    <link href="bower_components/meta.umeditor/lib/umeditor/dist/utf8-php/themes/default/css/umeditor.css"
+          type="text/css" rel="stylesheet">
+    <script src="bower_components/meta.umeditor/lib/umeditor/dist/utf8-php/third-party/jquery.min.js"></script>
+    <script src="bower_components/meta.umeditor/lib/umeditor/dist/utf8-php/umeditor.min.js"></script>
+    <script src="bower_components/meta.umeditor/lib/umeditor/dist/utf8-php/umeditor.config.js"></script>
     <script src="//cdn.bootcss.com/angular.js/1.4.4/angular.js"></script>
-    <script src="../src/meta.umeditor.js"></script>
+    <script src="bower_components/meta.umeditor/src/meta.umeditor.js"></script>
+    <style>
+        .simple {
+            /* box */
+            position: relative;
+            margin: 5px;
+
+            /* self block */
+
+            /* font */
+        }
+
+        .all {
+            position: relative;
+            margin: 5px;
+        }
+
+        .model {
+            position: absolute;
+            top: 0px;
+            right: -210px;
+
+            width: 200px;
+            height: 100%;
+            border: 1px dashed #ccc;
+        }
+    </style>
 </head>
 <body ng-app="app">
-<!--style给定宽度可以影响编辑器的最终宽度-->
-<!--<script type="text/plain" id="myEditor" style="width:1000px;height:240px;">-->
-<!--<p style="font-size:12px;color:#ccc;">这里我可以写一些输入提示</p>-->
-<!--</script>-->
 
-<div ng-controller="controller">
-    <script type="text/html" style="margin:auto;height:300px;width:300px;" ng-model="text" meta-umeditor
-            meta-umeditor-config='config'
-            meta-umeditor-placeholder="提示文案,placeholder!">
-    </script>
-    <div ng-bind="text">
+<!-- controller -->
+<div ng-controller="controller" style="width:800px;margin:auto;">
+    <!-- simple demo -->
+    <div class="simple">
+        <script type="text/html" style="margin:auto;height:300px;width:100%;" ng-model="simple_text" meta-umeditor
+                meta-umeditor-config='config'
+                meta-umeditor-placeholder="提示文案!这里是简单的示例">
+        </script>
+        <div class="model">
+            <div ng-bind="simple_text"></div>
+        </div>
     </div>
+    <!-- end simple demo -->
+    <!-- complete demo -->
+    <div class="all">
+        <script type="text/html" style="margin:auto;height:300px;width:100%;" ng-model="all_text" meta-umeditor
+                meta-umeditor-config='all_config'
+                meta-umeditor-placeholder="提示文案!这里是完整的示例">
+        </script>
+        <div class="model">
+            <div ng-bind="all_text"></div>
+        </div>
+    </div>
+    <!-- end complete demo -->
 </div>
 
 <script>
     var app = angular.module('app', [
-        'meta.umeditor'
-    ])
+                'meta.umeditor'
+            ])
             .run(['$rootScope', function ($rootScope) {
             }]);
 
     app.controller('controller', function ($scope) {
-//        $scope.config = {};
+//        $scope.config = undefined;
+        $scope.all_config = {};
     })
 </script>
 </body>
