--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>angular umeditor</title>
     <!--<link type="text/css" href="../lib/umeditor/dist/utf8-php/themes/default/css/umeditor.css">-->
     <link type="text/css"
-          href="https://raw.githubusercontent.com/dylike/meta.umeditor/master/lib/umeditor/dist/utf8-php/themes/default/css/umeditor.css"
+          href="./lib/umeditor/dist/utf8-php/themes/default/css/umeditor.css"
           rel="stylesheet">
 
     <style>
@@ -41,12 +41,12 @@
 <div ng-controller="controller" style="width:800px;margin:auto;">
     <!-- simple demo -->
     <div class="simple">
-        <script type="text/html" style="margin:auto;height:300px;width:100%;" ng-model="simple_text" meta-umeditor
+        <script type="text/html" style="margin:auto;height:300px;width:100%;" ng-model="parent_text" meta-umeditor
                 meta-umeditor-config='config'
                 meta-umeditor-placeholder="提示文案!这里是简单的示例">
         </script>
         <div class="model">
-            <div ng-bind="simple_text"></div>
+            <div ng-bind="parent_text"></div>
         </div>
     </div>
     <!-- end simple demo -->
@@ -62,28 +62,27 @@
     </div>
     <!-- end complete demo -->
 </div>
-<script type="javascript"
-        src="https://raw.githubusercontent.com/dylike/meta.umeditor/master/lib/umeditor/dist/utf8-php/third-party/jquery.min.js"></script>
-<script type="javascript"
-        src="https://raw.githubusercontent.com/dylike/meta.umeditor/master/lib/umeditor/dist/utf8-php/umeditor.js"></script>
-<script type="javascript"
-        src="https://raw.githubusercontent.com/dylike/meta.umeditor/master/lib/umeditor/dist/utf8-php/umeditor.config.js"></script>
-<script type="javascript" src="//cdn.bootcss.com/angular.js/1.5.8/angular.js"></script>
-<script type="javascript"
-        src="https://raw.githubusercontent.com/dylike/meta.umeditor/master/src/meta.umeditor.js"></script>
+<script
+        src="./lib/umeditor/dist/utf8-php/third-party/jquery.min.js"></script>
+<script
+        src="./lib/umeditor/dist/utf8-php/umeditor.js"></script>
+<script
+        src="./lib/umeditor/dist/utf8-php/umeditor.config.js"></script>
+<script src="//cdn.bootcss.com/angular.js/1.5.8/angular.js"></script>
+<script src="./src/meta.umeditor.js"></script>
 
 <script>
-    //    var app = angular.module('app', [
-    //        'meta.umeditor'
-    //    ]).run(['$rootScope', function ($rootScope) {
-    //
-    //    }]);
-    //
-    //    app.controller('controller', function ($scope) {
-    ////        $scope.config = undefined;
-    //        $scope.all_config = {};
-    //        $scope.simple_text = 'hello world';
-    //    })
+    var app = angular.module('app', [
+        'meta.umeditor'
+    ]).run(['$rootScope', function ($rootScope) {
+        $rootScope.parent_text = 'hello word';
+    }]);
+
+    app.controller('controller', function ($scope) {
+        //        $scope.config = undefined;
+        $scope.all_config = {};
+        $scope.simple_text = 'hello world';
+    })
 </script>
 
 </body>
